--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,6 +7,8 @@
 <div class="container">
   <div class="jumbotron">
     <h1 class="text-center">Shorten your URL</h1>
+    <br>
+    <p class="text-center text-muted">Enter a full URL (with https or http protocol):</p>
     <form class="" method="POST" action="." style="text-align:center;">
       {% csrf_token %}
       {{ form.as_p }}
